syntax = "proto3";
package message;
option go_package = "./;message";
import "base.proto";

service GatewayProtocol {
  rpc RequestService(ReqMsg) returns (ResMsg) {}
}